more section IDs

--- a/physics/electrical-engineering/inductors.html
+++ b/physics/electrical-engineering/inductors.html
@@ -5,22 +5,22 @@ layout: electrical-engineering
 ---
 <h1>Inductors</h1>
 
-<section>
+<section id="what-is-an-inductor">
     <h2>What is an Inductor?</h2>
     <p>An inductor, like batteries and capacitors, stores electricity, but in the form of a magnetic field. It can be used to smooth out electricity.</p>
 </section>
 
-<section>
+<section id="how-do-inductors-work">
     <h2>How do Inductors Work?</h2>
     <p>Inductors are actually quite simple and only consist of a coil of wire. This generates a magnetic field when we pass electricity through it. Because of Lenz's law, the magnetic field opposes the electricity. (If it didn't there would be infinite energy!) So, when we increase the current, the inductor resists that and when we decrease current, the inductor resists that.</p>
 </section>
 
-<section>
+<section id="inductance">
     <h2>Inductance</h2>
     <p>We measure inductors using <em>inductance</em>, which is measured in the unit of <em>henry</em> (symbol: H).</p>
 </section>
 
-<section>
+<section id="uses">
     <h2>Uses</h2>
     <p>Inductors are used for smoothing out electricity and storing electricity in power converters.</p>
 </section>
