--- a/physics/electrical-engineering/magnetism.html
+++ b/physics/electrical-engineering/magnetism.html
@@ -5,7 +5,7 @@ layout: electrical-engineering
 ---
 <h1>Magnetism</h1>
 
-<section>
+<section id="what-is-magnetism">
     <h2>What is Magnetism?</h2>
     <p></p>
 </section>
