--- a/physics/electrical-engineering/ohms-law.html
+++ b/physics/electrical-engineering/ohms-law.html
@@ -5,7 +5,7 @@ layout: electrical-engineering
 ---
 <h1>Ohm's Law</h1>
 
-<section>
+<section id="what-is-ohms-law">
     <h2>What is Ohm's Law?</h2>
     <p>Ohm's law relates voltage, current, and resistance in a nice, simple equation: </p>
     <blockquote>Voltage = Current x Resistance</blockquote>
@@ -14,7 +14,7 @@ layout: electrical-engineering
     <p>Ohm's law is named after German physicist Georg Ohm, who published this equation in 1827.</p>
 </section>
 
-<section>
+<section id="using-ohms-law">
     <h2>Using Ohm's Law</h2>
     <p>If we know current and resistance, we can calculate the voltage using Ohm's law:</p>
     <blockquote>V = IR</blockquote>
