--- a/physics/electrical-engineering/power.html
+++ b/physics/electrical-engineering/power.html
@@ -5,7 +5,7 @@ layout: electrical-engineering
 ---
 <h1>Electrical Power</h1>
 
-<section>
+<section id="what-is-electrical-power">
     <h2>What is Electrical Power?</h2>
     <p>Electrical power is the rate of electrical energy that something uses or produces. Electrical power can be calculated using the following formula: </p>
     <blockquote>Power = Current x Voltage</blockquote>
@@ -13,7 +13,7 @@ layout: electrical-engineering
     <blockquote>P = IV</blockquote>
 </section>
 
-<section>
+<section id="using-the-electrical-power-equation">
     <h2>Using the Electrical Power Equation</h2>
     <p>The electrical power equation is quite useful because the electrical power output of something or the electrical power used by something remains the same when we change the voltage or current.</p>
     <p>Electricity transmission, in fact, uses high voltage because of electrical power. First of all, let's remind ourselves of the equation for power:</p>
