--- a/physics/electrical-engineering/transistors.html
+++ b/physics/electrical-engineering/transistors.html
@@ -5,12 +5,12 @@ layout: electrical-engineering
 ---
 <h1>Transistors</h1>
 
-<section>
+<section id="what-are-transistors">
     <h2>What are Transistors?</h2>
     <p>A transistor is like a switch, but instead of needing to be turned on and off by humans, they can be turned on and off with electricity. This makes them much, much faster switches. Transistors are very important in electrical engineering. As an example, your computer is built using logic gates, which are built using transistors.</p>
 </section>
 
-<section>
+<section id="how-do-transistors-work">
     <h2>How do Transistors Work?</h2>
     <p></p>
 </section>
