add section IDs

--- a/physics/electrical-engineering/circuits.html
+++ b/physics/electrical-engineering/circuits.html
@@ -5,15 +5,15 @@ layout: electrical-engineering
 ---
 <h1>Circuits</h1>
 
-<section>
+<section id="what-are-circuits">
     <h2>What are Circuits?</h2>
     <p>A <em>circuit</em> is a loop that electrons can travel through. If we don't make it a loop, the electrons can't travel. Circuits include a source of electricity, like a battery. Circuits also generally include a load, which is something that uses up electricity, like a light bulb.</p>
     <p>The components of circuits are called <em>electric components</em>.</p>
     <p>We can also have a switch. A switch blocks the flow of the electrons. If the electrons are blocked, we call the circuit an <em>open circuit</em>. If the electrons are flowing, we call the circuit a <em>closed circuit</em>.</p>
 </section>
 
-<section>
-    <h2>Examples of Circuits</h2>
+<section id="examples">
+    <h2>Examples</h2>
     <p>Below is an example of a circuit. It has a source of electricity (battery) and a load (light bulb): </p>
     <img src="/images/physics/electrical-engineering/circuit-example-1.png">
     <p>We can also add a switch to the circuit: </p>
@@ -22,7 +22,7 @@ layout: electrical-engineering
     <img src="/images/physics/electrical-engineering/circuit-example-3.png">
 </section>
 
-<section>
+<section id="parallel-and-series-circuits">
     <h2>Parallel and Series Circuits</h2>
     <p>A series circuit is a circuit where all of the electrical components are connected on the same wire. One disadvantage is that if one component fails, the electrons stop flowing and none of the others can work: </p>
     <img src="/images/physics/electrical-engineering/series-circuit.png">
