add section IDs

--- a/physics/electrical-engineering/circuits.html
+++ b/physics/electrical-engineering/circuits.html
@@ -30,7 +30,7 @@ layout: electrical-engineering
     <img src="/images/physics/electrical-engineering/parallel-circuit.png">
 </section>
 
-<section>
+<section id="one-final-thing">
     <h2>One Final Thing</h2>
     <p>Before you close this tab or move on, check out this <a href="https://phet.colorado.edu/en/simulations/circuit-construction-kit-dc">circuit simulation</a>. There, you can experiment with all of the electrical engineering concepts you are learning by building circuits.</p>
 </section>
