--- a/physics/electrical-engineering/diodes.html
+++ b/physics/electrical-engineering/diodes.html
@@ -12,10 +12,15 @@ layout: electrical-engineering
 
 <section id="uses">
     <h2>Uses</h2>
-    <p>One interesting use of diodes is as a light. LEDs are in fact a specialized type of diode.</p>
+    <p>Diodes have a wide variety of uses.</p>
 </section>
 
 <section id="how-do-diodes-work">
     <h2>How do Diodes Work?</h2>
     <p></p>
+</section>
+
+<section>
+    <h2>Light Emitting Diodes (LEDs)</h2>
+    <p>Light emitting diodes are a type of diode that emit light when current is run through it.</p>
 </section>
