--- a/physics/electrical-engineering/conductors-insulators.html
+++ b/physics/electrical-engineering/conductors-insulators.html
@@ -10,14 +10,19 @@ layout: electrical-engineering
     <p>Atoms are made up of two parts: the electrons and the nucleus. The nucleus is an tiny and incredibly compact object in the center of the atom. The nucleus is made up of <em>protons</em> and <em>neutrons</em>. A proton has the charge of an electron, but positive. A neutron has a charge of zero. The electrons are in the outer region of the atom.</p>
 </section>
 
-<section id="what-is-a-conductor">
-    <h2>What is a Conductor?</h2>
+<section id="conductors">
+    <h2>Conductors</h2>
     <p>A <em>conductor</em> is a material that electricity can pass through. Most metals are conductive. We use conductors to make wires. Some materials are more conductive than others.</p>
 </section>
 
-<section id="what-is-an-insulator">
-    <h2>What is an Insulator?</h2>
+<section id="insulators">
+    <h2>Insulators</h2>
     <p>An <em>insulator</em> is a material that electricity can't pass through. This includes rubber and ceramic. We use insulators to cover the conductor when making wires so that people aren't injured by the electricity. Electricity can be dangerous!</p>
+</section>
+
+<section id="semiconductors">
+    <h2>Semiconductors</h2>
+    <p></p>
 </section>
 
 <section id="what-makes-something-conductive">
