--- a/physics/electrical-engineering/diodes.html
+++ b/physics/electrical-engineering/diodes.html
@@ -20,7 +20,7 @@ layout: electrical-engineering
     <p></p>
 </section>
 
-<section>
+<section id="light-emitting-diodes">
     <h2>Light Emitting Diodes (LEDs)</h2>
     <p>Light emitting diodes are a type of diode that emit light when current is run through it.</p>
 </section>
