--- a/physics/electrical-engineering/conductors-insulators.html
+++ b/physics/electrical-engineering/conductors-insulators.html
@@ -22,7 +22,7 @@ layout: electrical-engineering
 
 <section id="semiconductors">
     <h2>Semiconductors</h2>
-    <p></p>
+    <p>In addition to conductors and insulators, there is also the less common <em>semiconductor</em>. Semiconductors conduct electricity better than insulators, but worse than conductors. Semiconductors are used in <a href="/physics/electrical-engineering/diodes/">diodes</a> and <a href="/physics/electrical-engineering/transistors/">transistors</a>.</p>
 </section>
 
 <section id="what-makes-something-conductive">
