--- a/physics/electrical-engineering/diodes.html
+++ b/physics/electrical-engineering/diodes.html
@@ -15,9 +15,9 @@ layout: electrical-engineering
     <p>Diodes have a wide variety of uses.</p>
 </section>
 
-<section id="how-do-diodes-work">
-    <h2>How do Diodes Work?</h2>
-    <p></p>
+<section id="how-diodes-work">
+    <h2>How Diodes Work</h2>
+    <p>Diodes are made of <a href="/physics/electrical-engineering/conductors-inductors/#semiconductors">semiconductors</a>, usually silicon.</p>
 </section>
 
 <section id="light-emitting-diodes">
