--- a/physics/electrical-engineering/diodes.html
+++ b/physics/electrical-engineering/diodes.html
@@ -17,7 +17,7 @@ layout: electrical-engineering
 
 <section id="how-diodes-work">
     <h2>How Diodes Work</h2>
-    <p>Diodes are made of <a href="/physics/electrical-engineering/conductors-inductors/#semiconductors">semiconductors</a>, usually silicon.</p>
+    <p>Diodes are made of <a href="/physics/electrical-engineering/semiconductors/">semiconductors</a>, usually silicon.</p>
 </section>
 
 <section id="light-emitting-diodes">
