examples of semiconductors

--- a/physics/electrical-engineering/semiconductors.html
+++ b/physics/electrical-engineering/semiconductors.html
@@ -7,6 +7,7 @@ layout: electrical-engineering
 <section id="what-are-semiconductors">
     <h2>What are Semiconductors?</h2>
     <p>In addition to conductors and insulators, there is also the less common <em>semiconductor</em>. Semiconductors conduct electricity better than insulators, but worse than conductors. Semiconductors are used in <a href="/physics/electrical-engineering/diodes/">diodes</a> and <a href="/physics/electrical-engineering/transistors/">transistors</a>.</p>
+    <p>Some examples of semiconductors are silicon, gallium arsenide, and germanium. Silicon is the most popular semiconductor, with gallium arsenide second.</p>
 </section>
 
 <section id="how-semiconductors-work">
