--- a/physics/electrical-engineering/semiconductors.html
+++ b/physics/electrical-engineering/semiconductors.html
@@ -17,5 +17,7 @@ layout: electrical-engineering
 
 <section id="doping">
     <h2>Doping</h2>
-    <p></p>
+    <p><em>Doping</em> is when we intentionally add impurities to the semiconductor.</p>
+    <p>Silicon has four valence electrons, so silicon forms a crystal with each silicon atom bonding to four other silicon atoms. Now, what if we add an atom with less valence electrons than silicon, like boron? Boron has three electrons, so there will be a hole with no electron. The electrons will move into the hole, this moving the hole. We often think of the hole as moving. So, this increases the conductance because the electrons are moving. This is called <em>p-type</em> doping.</p>
+    <p>If we add something like phosphorus to the silicon, we get <em>n-type</em> doping. This is because phosphorus has five valence electrons, so there is one electrons that can move between the atoms.</p>
 </section>
