how diodes work section

--- a/physics/electrical-engineering/diodes.html
+++ b/physics/electrical-engineering/diodes.html
@@ -17,7 +17,9 @@ layout: electrical-engineering
 
 <section id="how-diodes-work">
     <h2>How Diodes Work</h2>
-    <p>Diodes are made of <a href="/physics/electrical-engineering/semiconductors/">semiconductors</a>, usually silicon.</p>
+    <p>Diodes are made of <a href="/physics/electrical-engineering/semiconductors/">semiconductors</a>. In particular, the are made up of a p-type doped semiconductor stuck onto an n-type doped semiconductor.</p>
+    <p>If you run the electricity in the forward direction, the electrons in the n-type side move to fill the holes in the p-type side and the electricity flows.</p>
+    <p>However, if you have the electricity go in the reverse direction, the electrons and the electron holes are drawn to either side and no electricity will flow.</p>
 </section>
 
 <section id="light-emitting-diodes">
