--- a/programming/python/data-structures-and-algorithms/queues.html
+++ b/programming/python/data-structures-and-algorithms/queues.html
@@ -48,13 +48,13 @@ print(type(q.queue))
     <p>Notice how the type of <code>q.queue</code> is of <code>collections.deque</code>. This is a seperate class that implements a <a href="/programming/python/data-structures-and-algorithms/deques/">Deque</a>, which we'll learn about in the next tutorial.</p>
 </section>
 
-<section id="putting">
-    <h2>Putting</h2>
+<section id="enqueuing">
+    <h2>Enqueuing</h2>
     <p>With Queues, </p>
 </section>
 
-<section id="removing-items">
-    <h2>Removing Items</h2>
+<section id="dequeuing">
+    <h2>Dequeuing</h2>
     <p></p>
 </section>
 
