--- a/programming/python/data-structures-and-algorithms/queues.html
+++ b/programming/python/data-structures-and-algorithms/queues.html
@@ -65,8 +65,8 @@ print(type(q.queue))
         <h3>When To Use Queues</h3>
         <p>In Programming problems, it is often useful to use Queues when:</p>
         <ul>
-            <li>Queues Are Involved (Queues Of Books)</li>
-            <li>There Is A "First In Last Out" Format</li>
+            <li>Lines are Involved (Lining up to go somewhere, etc.)</li>
+            <li>There Is A "First In First Out" Format</li>
         </ul>
     </section>
     <section id="implementing-queues-in-contests">
