--- a/math/index.html
+++ b/math/index.html
@@ -9,6 +9,7 @@ layout: default
     <ul>
         <li><a href="/math/algebra/">Algebra</a></li>
         <li><a href="/math/shape-space/">Shape and Space</a></li>
+        <li><a href="/math/geometry/">Geometry</a></li>
     </ul>
     <img src="/images/math/math.jpg" alt="Math">
 </section>
