--- a/tutorial-index.html
+++ b/tutorial-index.html
@@ -21,6 +21,7 @@ layout: default
                     <li><a href="/programming/python/fastapi/">FastAPI</a></li>
                     <li><a href="/programming/python/discord-py/">Discord.py</a></li>
                     <li><a href="/programming/python/sockets/">Sockets</a></li>
+                    <li><a href="/programming/python/threading/">Threading</a></li>
                 </ul>
             </li>
             <li><a href="/programming/golang/">Go</a></li>
