--- a/programming/python/threading/index.html
+++ b/programming/python/threading/index.html
@@ -1,1 +1,24 @@
+---
+layout: python-threading
+title: Introduction to Threading in Python
+permalink: /programming/python/threading/
+---
 
+<h1>Introduction to Threading in Python</h1>
+
+<section>
+    <h2>What is Threading?</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>Why use Threading?</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>Prerequisites</h2>
+    <ul>
+        <li>Experience with Python</li>
+    </ul>
+</section>
