--- a/math/shape-space/translations.html
+++ b/math/shape-space/translations.html
@@ -18,16 +18,25 @@ layout: shape-space
         <h3>Example #1</h3>
         <p>Translation Right By 5 Units</p>
         <div style="height: 200px; width: 200px; border: 2px solid black; float: left; margin-right: 20px; background-color: blue;"></div><div style="height: 200px; width: 200px; border: 2px solid black; float: left; background-color: blue;"></div><br><br><br><br><br><br><br><br><br><br><br><br>
+        <p>In this example, we <i>translate</i> the square 5 units right, meaning that we move it without messing with how the shape looks.</p>
     </section>
 
     <section>
         <h3>Example #2</h3>
-        <p></p>
+        <p>Translation Down By 10 Units</p>
+        <div class="triangle-up1"></div>
+        <br><br>
+        <div class="triangle-up1"></div>
+        <p>In this example, we <i>translate</i> the triangle 10 units down, meaning that we move it down without messing with how the shape looks so the triangle still looks the same.</p>
     </section>
 
     <section>
         <h3>Example #3</h3>
-        <p></p>
+        <p>Translation Diagonally 10 Units</p>
+        <div style="float:left;height:100px;width:300px;"></div><div class="triangle-up3"></div>
+        <br><br><br><br><br><br><br><br>
+        <div class="triangle-up2"></div>
+        <p>In this example, we <i>translate</i> the triangle 10 units down, meaning that we move it down without messing with how the shape looks so the triangle still looks the same.</p>
     </section>
 
     <section>
