planet categorization change

--- a/physics/astronomy/solar-system/uranus.html
+++ b/physics/astronomy/solar-system/uranus.html
@@ -7,7 +7,7 @@ layout: astronomy
 
 <section id="overview">
     <h2>Overview</h2>
-    <p></p>
+    <p>Uranus is the seventh planet from the sun.</p>
     <img src="/images/physics/astronomy/uranus.png">
 </section>
 
