--- a/physics/astronomy/solar-system/index.html
+++ b/physics/astronomy/solar-system/index.html
@@ -30,7 +30,7 @@ layout: astronomy
         <li><a href="/physics/astronomy/solar-system/uranus/">Uranus</a></li>
         <li><a href="/physics/astronomy/solar-system/neptune/">Neptune</a></li>
     </ol>
-    <p>The planets can be categorized into two categories: the terrestrial planets and the gas giants. The terrestrial planets are Mercury, Venus, Earth and Mars. The terrestrial planets are made up of heavy elements. The gas giants are much larger than the terrestrial planets and are made up of gases. The gas giants are Jupiter, Saturn, Uranus, and Neptune.</p>
+    <p>There are different ways of categorizing planets, but the one Learnmonkey uses has three categories: <em>terrestrial planets</em>, <em>gas giants</em>, and <em>ice giants</em>. The terrestrial planets are Mercury, Venus, Earth and Mars. The terrestrial planets are made up of rocks and metals. The gas giants are Jupiter and Saturn. The gas giants are much larger than the terrestrial planets and are made up of gases like hydrogen and helium. Finally, the ice giants are Uranus and Neptune. Ice giants have gases like hydrogen and helium, but they also have heavier elements like oxygen, carbon, nitrogen, and sulfur. Ice giants are smaller than gas giants, but are still larger than terrestrial planets.</p>
 </section>
 
 <section id="dwarf-planets">
