--- a/physics/astronomy/solar-system/uranus.html
+++ b/physics/astronomy/solar-system/uranus.html
@@ -7,7 +7,7 @@ layout: astronomy
 
 <section id="overview">
     <h2>Overview</h2>
-    <p>Uranus is the seventh planet from the sun.</p>
+    <p>Uranus is the seventh planet from the sun. It is an <a href="/physics/astronomy/solar-system/#categorizing-planets"></a>. It was discovered by William Herschel in 1781.</p>
     <img src="/images/physics/astronomy/uranus.png">
 </section>
 
