--- a/physics/astronomy/solar-system/uranus.html
+++ b/physics/astronomy/solar-system/uranus.html
@@ -7,13 +7,13 @@ layout: astronomy
 
 <section id="overview">
     <h2>Overview</h2>
-    <p>Uranus is the seventh planet from the sun. It is an <a href="/physics/astronomy/solar-system/#categorizing-planets"></a>. It was discovered by William Herschel in 1781.</p>
+    <p>Uranus is the seventh planet from the sun. It is an <a href="/physics/astronomy/solar-system/#categorizing-planets"></a>. It was discovered by William Herschel in 1781. Uranus has 13 known rings. </p>
     <img src="/images/physics/astronomy/uranus.png">
 </section>
 
 <section id="size-and-distance">
     <h2>Size and Distance</h2>
-    <p></p>
+    <p>The distance from Uranus to the sun is 2.9 billion kilometers.</p>
 </section>
 
 <section id="orbit-and-rotation">
@@ -33,7 +33,12 @@ layout: astronomy
 
 <section id="atmosphere">
     <h2>Atmosphere</h2>
-    <p></p>
+    <p>Uranus's atmosphere is mostly made up of hydrogen and helium.</p>
+</section>
+
+<section id="moons">
+    <h2>Moons</h2>
+    <p>Uranus has 27 moons which are named after characters in the works of William Shakespeare and Alexander Pope.</p>
 </section>
 
 <section id="formation">
