--- a/programming/python/data-structures-and-algorithms/breadth-first-search.html
+++ b/programming/python/data-structures-and-algorithms/breadth-first-search.html
@@ -5,4 +5,9 @@ permalink: /programming/python/data-structures-and-algorithms/breadth-first-sear
 ---
 
 <h1>Breadth First Search</h1>
-<p></p>
+<p>In this tutorial, we'll learn about the <i><b>Breadth First Search</b></i> algorithm.</p>
+
+<section>
+    <h2>What is a Breadth First Search?</h2>
+    <p>Breadth First Search is a popular <i>Graph and Grid Traversal</i> Search algorithm.</p>
+</section>
