--- a/math/shape-space/reflections.html
+++ b/math/shape-space/reflections.html
@@ -8,16 +8,34 @@ layout: shape-space
 
 <section>
     <h2>What are Reflections?</h2>
-    <p>Transformation is very important in Shape and Space. It involves moving different shapes, both 2D and 3D, in different ways. In this tutorial, we'll learn about them.</p>
+    <p>A Translation is a Transformation in which you move a shape left, up, right, down, or diagonally, but doing the same Translation to each point on the shape. You <b>MUST</b> not mess up or forget any points, or the Translation will not be correct.</p>
 </section>
 
 <section>
-    <h2>Different Reflections</h2>
-    <p>There are <u>three</u> main transformations:</p>
-    <ul>
-        <li>The Translation</li>
-        <li>The Reflection</li>
-        <li>The Rotation</li>
-    </ul>
-    <p>Of course, there are also some other Reflections like Dilations but these are the main ones.</p>
+    <h2>Examples</h2>
+    <p>Here are a few examples of Reflections:</p>
+    <section>
+        <h3>Example #1</h3>
+        <p>Translation Right By 5 Units</p>
+        <div style="height: 200px; width: 200px; border: 2px solid black; float: left; margin-right: 20px; background-color: blue;"></div><div style="height: 200px; width: 200px; border: 2px solid black; float: left; background-color: blue;"></div><br><br><br><br><br><br><br><br><br><br><br><br>
+        <p>In this example, we <i>translate</i> the square 5 units right, meaning that we move it without messing with how the shape looks.</p>
+    </section>
+
+    <section>
+        <h3>Example #2</h3>
+        <p>Translation Down By 10 Units</p>
+        <div class="triangle-up1"></div>
+        <br><br>
+        <div class="triangle-up1"></div>
+        <p>In this example, we <i>translate</i> the triangle 10 units down, meaning that we move it down without messing with how the shape looks so the triangle still looks the same.</p>
+    </section>
+
+    <section>
+        <h3>Example #3</h3>
+        <p>Translation Diagonally 10 Units</p>
+        <div style="float:left;height:100px;width:300px;"></div><div class="triangle-up3"></div>
+        <br><br><br><br><br><br><br><br>
+        <div class="triangle-up2"></div>
+        <p>In this example, we <i>translate</i> the triangle 10 units down, meaning that we move it down without messing with how the shape looks so the triangle still looks the same.</p>
+    </section>
 </section>
