--- a/math/shape-space/reflections.html
+++ b/math/shape-space/reflections.html
@@ -8,7 +8,7 @@ layout: shape-space
 
 <section>
     <h2>What are Reflections?</h2>
-    <p>A Translation is a Transformation in which you move a shape left, up, right, down, or diagonally, but doing the same Translation to each point on the shape. You <b>MUST</b> not mess up or forget any points, or the Translation will not be correct.</p>
+    <p>A Reflection is a Transformation in which you reflect a shape over a line. It's similar to viewing it through a mirror. It can seem upside down or flipped over.</p>
 </section>
 
 <section>
