--- a/math/shape-space/rotations.html
+++ b/math/shape-space/rotations.html
@@ -8,16 +8,31 @@ layout: shape-space
 
 <section>
     <h2>What are Rotations?</h2>
-    <p>Transformation is very important in Shape and Space. It involves moving different shapes, both 2D and 3D, in different ways. In this tutorial, we'll learn about them.</p>
+    <p>A Reflection is a Transformation in which you reflect a shape over a line. It's similar to viewing it through a mirror. It can seem upside down or flipped over.</p>
 </section>
 
 <section>
-    <h2>Different Rotations</h2>
-    <p>There are <u>three</u> main transformations:</p>
-    <ul>
-        <li>The Translation</li>
-        <li>The Reflection</li>
-        <li>The Rotation</li>
-    </ul>
-    <p>Of course, there are also some other Rotations like Dilations but these are the main ones.</p>
+    <h2>Examples</h2>
+    <p>Here are a few examples of Rotations:</p>
+    <section>
+        <h3>Example #1</h3>
+        <div style="height: 200px; width: 200px; border: 2px solid black; float: left; margin-right: 20px; background-color: blue;"></div><div style="margin:5px;width:5px;height:200px;background-color:black;"></div><div style="height: 200px; width: 200px; border: 2px solid black; float: left; background-color: blue;"></div><br><br><br><br><br><br><br><br><br><br><br><br>
+        <p>In this example, we <i>translate</i> the square 5 units right, meaning that we move it without messing with how the shape looks.</p>
+    </section>
+
+    <section>
+        <h3>Example #2</h3>
+        <div class="triangle-up1"></div>
+        <br><br>
+        <div class="triangle-up1"></div>
+        <p>In this example, we <i>translate</i> the triangle 10 units down, meaning that we move it down without messing with how the shape looks so the triangle still looks the same.</p>
+    </section>
+
+    <section>
+        <h3>Example #3</h3>
+        <div style="float:left;height:100px;width:300px;"></div><div class="triangle-up3"></div>
+        <br><br><br><br><br><br><br><br>
+        <div class="triangle-up2"></div>
+        <p>In this example, we <i>translate</i> the triangle 10 units down, meaning that we move it down without messing with how the shape looks so the triangle still looks the same.</p>
+    </section>
 </section>
