--- a/math/shape-space/rotations.html
+++ b/math/shape-space/rotations.html
@@ -8,7 +8,7 @@ layout: shape-space
 
 <section>
     <h2>What are Rotations?</h2>
-    <p>A Reflection is a Transformation in which you reflect a shape over a line. It's similar to viewing it through a mirror. It can seem upside down or flipped over.</p>
+    <p>A Reflection is a Transformation in which you rotate a shape around a point. The point doesn't have to be touching the shape, it can be anywhere on a graph.</p>
 </section>
 
 <section>
