--- a/math/shape-space/reflections.html
+++ b/math/shape-space/reflections.html
@@ -16,8 +16,8 @@ layout: shape-space
     <p>Here are a few examples of Reflections:</p>
     <section>
         <h3>Example #1</h3>
-        <div style="height: 200px; width: 200px; border: 2px solid black; float: left; margin-right: 20px; background-color: blue;"></div><div style="margin:5px;width:5px;height:200px;background-color:black;"></div><div style="height: 200px; width: 200px; border: 2px solid black; float: left; background-color: blue;"></div><br><br><br><br><br><br><br><br><br><br><br><br>
-        <p>In this example, we <i>translate</i> the square 5 units right, meaning that we move it without messing with how the shape looks.</p>
+        <img src="reflection1.png" alt="Reflection Example Image">
+        <p>In this example, we <i>reflect</i> the square 5 units right, meaning that we move it without messing with how the shape looks.</p>
     </section>
 
     <section>
