--- a/math/shape-space/reflections.html
+++ b/math/shape-space/reflections.html
@@ -16,7 +16,7 @@ layout: shape-space
     <p>Here are a few examples of Reflections:</p>
     <section>
         <h3>Example #1</h3>
-        <img src="reflection1.png" alt="Reflection Example Image">
+        <img src="/math/shape-space/reflection1.png" alt="Reflection Example Image">
         <p>In this example, we <i>reflect</i> the square over the line. It looks we only translated it, because the square is symmetric, but if we used a triangle, it would be easy to see how we reflected the square.</p>
     </section>
 
