--- a/math/shape-space/reflections.html
+++ b/math/shape-space/reflections.html
@@ -22,10 +22,8 @@ layout: shape-space
 
     <section>
         <h3>Example #2</h3>
-        <div class="triangle-up1"></div>
-        <br><br>
-        <div class="triangle-up1"></div>
-        <p>In this example, we <i>translate</i> the triangle 10 units down, meaning that we move it down without messing with how the shape looks so the triangle still looks the same.</p>
+        <img src="/math/shape-space/reflection2.png" alt="Reflection Example Image">
+        <p>In this example, we <i>reflect</i> the triangle over the line. Unlike the previous example, we can easily see how it is reflected, because of the point at the top.</p>
     </section>
 
     <section>
