--- a/math/shape-space/reflections.html
+++ b/math/shape-space/reflections.html
@@ -28,9 +28,7 @@ layout: shape-space
 
     <section>
         <h3>Example #3</h3>
-        <div style="float:left;height:100px;width:300px;"></div><div class="triangle-up3"></div>
-        <br><br><br><br><br><br><br><br>
-        <div class="triangle-up2"></div>
-        <p>In this example, we <i>translate</i> the triangle 10 units down, meaning that we move it down without messing with how the shape looks so the triangle still looks the same.</p>
+        <img src="/math/shape-space/reflection3.png" alt="Reflection Example Image">
+        <!-- <p>In this example, we <i>translate</i> the triangle 10 units down, meaning that we move it down without messing with how the shape looks so the triangle still looks the same.</p> -->
     </section>
 </section>
