css dimensions for image

--- a/math/shape-space/reflections.html
+++ b/math/shape-space/reflections.html
@@ -28,7 +28,7 @@ layout: shape-space
 
     <section>
         <h3>Example #3</h3>
-        <img src="/math/shape-space/reflection3.png" alt="Reflection Example Image">
+        <img src="/math/shape-space/reflection3.png" alt="Reflection Example Image" style="height:200%;width:200%;">
         <!-- <p>In this example, we <i>translate</i> the triangle 10 units down, meaning that we move it down without messing with how the shape looks so the triangle still looks the same.</p> -->
     </section>
 </section>
