--- a/physics/astronomy/index.html
+++ b/physics/astronomy/index.html
@@ -5,6 +5,11 @@ layout: astronomy
 ---
 <h1>Introduction to Astronomy</h1>
 
+<scetion>
+    <h2>Astronomy at Learnmonkey</h2>
+    <p></p>
+</scetion>
+
 <section>
     <h2>What is Astronomy?</h2>
     <p>Astronomy is the study of the universe. Astronomers use fields such as math, physics, and chemistry to study things like stars, planets, galaxies, black holes, and much more. Astronomy is one of the most interesting areas of science and new discoveries are being made every day.</p>
