--- a/physics/astronomy/index.html
+++ b/physics/astronomy/index.html
@@ -7,7 +7,8 @@ layout: astronomy
 
 <scetion>
     <h2>Astronomy at Learnmonkey</h2>
-    <p></p>
+    <p>At Learnmonkey, we provide many Astronomy tutorials!</p>
+    <p>This is the first page in our basic Astronomy course, which you can learn about below! Additionally, you can view our <a href="/tutorial-index/">Tutorial Index</a> for more Astronomy lessons and our <a href="/physics/astronomy/articles/">Astronomy Articles</a> for articles on Astronomy!</p>
 </scetion>
 
 <section>
