--- a/programming/python/requests.html
+++ b/programming/python/requests.html
@@ -13,7 +13,7 @@ permalink: /programming/python/requests/
 
 <section id="requests-module">
     <h2>The <code>requests</code> Module</h2>
-    <p>Python has built-in modules for doing HTTP requests, but the <code>requests</code> module makes it much simpler. Because <code>requests</code> is not in the Python standard library, we need to install it using PIP: </p>
+    <p>Python has built-in modules for doing HTTP requests like <code>urllib</code>, but the <code>requests</code> module makes it much simpler. Because <code>requests</code> is not in the Python standard library, we need to install it using PIP: </p>
     <code class="language-bat">pip install requests</code>
     <small>If PIP doesn't work, read our <a href="/programming/python/articles/troubleshooting-pip/">Troubleshooting PIP</a> article.</small>
     <p>To test if you installed <code>requests</code> correctly, try running the following Python script: </p>
