--- a/math/shape-space/reflections.html
+++ b/math/shape-space/reflections.html
@@ -29,6 +29,6 @@ layout: shape-space
     <section>
         <h3>Example #3</h3>
         <img src="/math/shape-space/reflection3.png" alt="Reflection Example Image" height="450">
-        <!-- <p>In this example, we <i>translate</i> the triangle 10 units down, meaning that we move it down without messing with how the shape looks so the triangle still looks the same.</p> -->
+        <p>In this example, we <i>reflect</i> the square with the smiley face on it over the line. Since there is a smiley face, we can easily see how the reflection works and what the end result looks like.</p>
     </section>
 </section>
