--- a/math/shape-space/rotations.html
+++ b/math/shape-space/rotations.html
@@ -17,7 +17,7 @@ layout: shape-space
     <section>
         <h3>Example #1</h3>
         <img src="/math/shape-space/rotation1.png" alt="Rotation Example Image">
-        <p>In this example, we <i>translate</i> the square 5 units right, meaning that we move it without messing with how the shape looks.</p>
+        <p>In this example, we <i>rotate</i> the square around the point. We can tell how it is rotated by the text on the square.</p>
     </section>
 
     <section>
