--- a/math/shape-space/rotations.html
+++ b/math/shape-space/rotations.html
@@ -22,7 +22,8 @@ layout: shape-space
 
     <section>
         <h3>Example #2</h3>
-        <p>In this example, we <i>translate</i> the triangle 10 units down, meaning that we move it down without messing with how the shape looks so the triangle still looks the same.</p>
+        <img src="/math/shape-space/rotation2.png" alt="Rotation Example Image">
+        <p>In this example, we <i>rotate</i> the cat around the point. We can call this a "90 degree clockwise rotate around the point".</p>
     </section>
 
     <section>
