--- a/math/shape-space/rotations.html
+++ b/math/shape-space/rotations.html
@@ -28,6 +28,7 @@ layout: shape-space
 
     <section>
         <h3>Example #3</h3>
+        <img src="/math/shape-space/rotation3.png" alt="Rotation Example Image">
         <p>In this example, we <i>translate</i> the triangle 10 units down, meaning that we move it down without messing with how the shape looks so the triangle still looks the same.</p>
     </section>
 </section>
