--- a/math/shape-space/rotations.html
+++ b/math/shape-space/rotations.html
@@ -29,6 +29,6 @@ layout: shape-space
     <section>
         <h3>Example #3</h3>
         <img src="/math/shape-space/rotation3.png" alt="Rotation Example Image">
-        <p>In this example, we <i>rotate</i> the triangle 10 units down, meaning that we move it down without messing with how the shape looks so the triangle still looks the same.</p>
+        <p>In this example, we <i>rotate</i> the cat around the point. It's the same as the previous example, except that we rotate it 180 degrees instead of 90. We can call this a "180 degree rotate around the point".</p>
     </section>
 </section>
