--- a/programming/golang/constants.html
+++ b/programming/golang/constants.html
@@ -18,5 +18,5 @@ layout: golang
 
 <section>
     <h2>Making a Constant in Go</h2>
-    <p>IInstead of typing something like <code>var n int = 3</code> you type <code>const n int = 3</code>. Now, whenever you try and set the value of <code>n</code>, like <code>n = 4</code>, you get an error.</p>
+    <p>Instead of typing something like <code>var n int = 3</code> you type <code>const n int = 3</code>. Now, whenever you try and set the value of <code>n</code>, like <code>n = 4</code>, you get an error.</p>
 </section>
