--- a/math/shape-space/angles.html
+++ b/math/shape-space/angles.html
@@ -8,5 +8,5 @@ layout: shape-space
 
 <section>
     <h2>What are Angles?</h2>
-    <p>An <b>Angle</b> is a </p>
+    <p>An <b>Angle</b> is the space between two rays, at the point where the meet, called the <i>vertex</i>.</p>
 </section>
