--- a/math/shape-space/angles.html
+++ b/math/shape-space/angles.html
@@ -10,3 +10,13 @@ layout: shape-space
     <h2>What are Angles?</h2>
     <p>An <b>Angle</b> is the space between two rays, at the point where the meet, called the <i>vertex</i>.</p>
 </section>
+
+<section>
+    <h2>Measuring Angles</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>Different Angles</h2>
+    <p></p>
+</section>
