--- a/math/shape-space/angles.html
+++ b/math/shape-space/angles.html
@@ -13,7 +13,11 @@ layout: shape-space
 
 <section>
     <h2>Measuring Angles</h2>
-    <p></p>
+    <p>Angles are measured in degrees and radians. However, you only need to know radians in higher math levels so degrees is the dominant measure of angles.</p>
+    <section>
+        <h3>Degrees</h3>
+        <p></p>
+    </section>
 </section>
 
 <section>
