--- a/math/shape-space/angles.html
+++ b/math/shape-space/angles.html
@@ -16,7 +16,7 @@ layout: shape-space
     <p>Angles are measured in degrees and radians. However, you only need to know radians in higher math levels so degrees is the dominant measure of angles.</p>
     <section>
         <h3>Degrees</h3>
-        <p></p>
+        <p>Degrees are the measure for angles. Some uses of degrees in real life is measuring spins, like a 360, </p>
     </section>
 </section>
 
