--- a/math/shape-space/angles.html
+++ b/math/shape-space/angles.html
@@ -22,5 +22,19 @@ layout: shape-space
 
 <section>
     <h2>Different Angles</h2>
-    <p></p>
+    <p>There are 4 main types of angles:</p>
+    <ul>
+        <li>Acute Angle</li>
+        <li>Right Angle</li>
+        <li>Obtuse Angle</li>
+        <li>Straight Angle</li>
+        <li>Reflex Angle</li>
+    </ul>
+    <p>An Acute Angle is an angle that is less than 90&deg;</p>
+    <p>A Right Angle is an angle that is exactly 90&deg;</p>
+    <p>An Obtuse Angle is an angle that is greater than 90&deg; but less than 180&deg;</p>
+    <p>A Straight Angle is an angle that is exactly 180&deg;</p>
+    <p>A Reflex Angle is an angle that is greater than 180&deg;</p>
+    <br>
+    <p>Another thing to remember is that a 360&deg; angle is a circle.</p>
 </section>
