--- a/math/shape-space/polygons.html
+++ b/math/shape-space/polygons.html
@@ -7,3 +7,17 @@ layout: shape-space
 <h1>Polygons</h1>
 <p>In this tutorial, we'll learn about <b>Polygons</b>.</p>
 
+<section>
+    <h2>What are Polygons?</h2>
+    <p>A polygon is a closed 2-D shape that has straight sides. There are two kinds of Polygons: <i>Regular Polygons</i> and <i>Irregular Polygons</i>.</p>
+</section>
+
+<section>
+    <h2>Regular Polygons</h2>
+    <p>Regular Polygons are Polygons in which all sides lengths and interior angles are the same.</p>
+</section>
+
+<section>
+    <h2>Irregular Polygons</h2>
+    <p>Irregular Polygons are Polygons in which all sides lengths and interior angles are not the same.</p>
+</section>
