--- a/math/shape-space/perimeter-and-area.html
+++ b/math/shape-space/perimeter-and-area.html
@@ -6,3 +6,13 @@ layout: shape-space
 
 <h1>Perimeter and Area</h1>
 <p>In this tutorial, we'll learn about <b>Perimeter and Area</b> of <i>Polygons</i>.</p>
+
+<section>
+    <h2>Perimeter of Polygons</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>Area</h2>
+    <p></p>
+</section>
