--- a/math/shape-space/volume.html
+++ b/math/shape-space/volume.html
@@ -9,5 +9,10 @@ layout: shape-space
 
 <section>
     <h2>What is Volume?</h2>
-    <p>A polygon is a closed 2-D shape that has straight sides. There are two kinds of Polygons: <i>Regular Polygons</i> and <i>Irregular Polygons</i>.</p>
+    <p><b>Volume</b> is similar to <i>area</i> but it's for 3-D shapes. It is the amount of space a 3-D shape takes up.</p>
+</section>
+
+<section>
+    <h2>Calculating Volume of Recangular Prisms</h2>
+    <p>To calculate volume for rectangular prisms, you just need to multiply width, height, and length, which are the three main values of a rectangular prism.</p>
 </section>
